--- a/package.json
+++ b/package.json
@@ -40,9 +40,30 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "vue/attribute-hyphenation": "error",
+      "vue/html-end-tags": "error",
+      "vue/html-closing-bracket-newline": "error",
+      "vue/html-closing-bracket-spacing": "error",
+      "vue/html-indent": "error",
+      "vue/html-quotes": "error",
+      "vue/html-self-closing": "error",
+      "vue/max-attributes-per-line": "error",
+      "vue/multiline-html-element-content-newline": "error",
+      "vue/mustache-interpolation-spacing": "error",
+      "vue/name-property-casing": "error",
+      "vue/no-multi-spaces": "error",
+      "vue/no-spaces-around-equal-signs-in-attribute": "error",
+      "vue/no-template-shadow": "warning",
+      "vue/prop-name-casing": "error",
+      "vue/require-default-prop": "error",
+      "vue/require-prop-types": "error",
+      "vue/singleline-html-element-content-newline": "error",
+      "vue/v-bind-style": "error",
+      "vue/v-on-style": "error"
     }
   },
   "postcss": {
