--- a/package.json
+++ b/package.json
@@ -63,7 +63,12 @@
       "vue/require-prop-types": "error",
       "vue/singleline-html-element-content-newline": "error",
       "vue/v-bind-style": "error",
-      "vue/v-on-style": "error"
+      "vue/v-on-style": "error",
+      "vue/attributes-order": "error",
+      "vue/no-confusing-v-for-v-if": "error",
+      "vue/no-v-html": "error",
+      "vue/order-in-components": "error",
+      "vue/this-in-template": "error"
     }
   },
   "postcss": {
